@@ -4,7 +4,7 @@ import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.List;
 import my.javacraft.soap2rest.rest.api.Metric;
-import my.javacraft.soap2rest.rest.app.service.ElectricService;
+import my.javacraft.soap2rest.rest.app.service.GasService;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -12,62 +12,65 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.ResponseEntity;
 
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.atLeastOnce;
 
 @ExtendWith(MockitoExtension.class)
-public class ElectricResourceTest {
+public class GasControllerTest {
 
     @Mock
-    ElectricService electricService;
+    GasService gasService;
 
     @Test
     public void testGetElectricMetrics() {
-        ElectricResource electricResource = new ElectricResource(electricService);
+        GasController gasController = new GasController(gasService);
 
-        when(electricService.getMetricsByAccountId(anyLong())).thenReturn(createMetricList());
+        when(gasService.getMetricsByAccountId(anyLong())).thenReturn(createMetricList());
 
-        ResponseEntity<List<Metric>> response = electricResource.getElectricMetrics(1L);
+        ResponseEntity<List<Metric>> response = gasController.getGasMetrics(1L);
         Assertions.assertNotNull(response);
         Assertions.assertNotNull(response.getBody());
         Assertions.assertEquals(1, response.getBody().size());
-        verify(electricService, atLeastOnce()).getMetricsByAccountId(anyLong());
+        verify(gasService, atLeastOnce()).getMetricsByAccountId(anyLong());
     }
 
     @Test
     public void testGetLatestElectricMetric() {
-        ElectricResource electricResource = new ElectricResource(electricService);
+        GasController gasController = new GasController(gasService);
 
-        when(electricService.findLatestMetric(anyLong())).thenReturn(createMetricList().get(0));
+        when(gasService.findLatestMetric(anyLong())).thenReturn(createMetricList().getFirst());
 
-        ResponseEntity<Metric> response = electricResource.getLatestElectricMetric(1L);
+        ResponseEntity<Metric> response = gasController.getLatestGasMetric(1L);
         Assertions.assertNotNull(response);
         Assertions.assertNotNull(response.getBody());
-        verify(electricService, atLeastOnce()).findLatestMetric(anyLong());
+        verify(gasService, atLeastOnce()).findLatestMetric(anyLong());
     }
 
     @Test
     public void testPutNewElectricMetric() {
-        ElectricResource electricResource = new ElectricResource(electricService);
+        GasController gasController = new GasController(gasService);
 
-        Metric metric = createMetricList().get(0);
-        when(electricService.submit(any())).thenReturn(metric);
+        Metric metric = createMetricList().getFirst();
+        when(gasService.submit(any())).thenReturn(metric);
 
-        ResponseEntity<Metric> response = electricResource.putNewElectricMetric(metric);
+        ResponseEntity<Metric> response = gasController.putNewGasMetric(metric);
         Assertions.assertNotNull(response);
         Assertions.assertNotNull(response.getBody());
-        verify(electricService, atLeastOnce()).submit(any());
+        verify(gasService, atLeastOnce()).submit(any());
     }
 
     @Test
     public void testDeleteAllElectricMetrics() {
-        ElectricResource electricResource = new ElectricResource(electricService);
+        GasController gasController = new GasController(gasService);
 
-        when(electricService.deleteAll()).thenReturn(Boolean.TRUE);
+        when(gasService.deleteAll()).thenReturn(Boolean.TRUE);
 
-        ResponseEntity<Boolean> response = electricResource.deleteAllElectricMetrics();
+        ResponseEntity<Boolean> response = gasController.deleteAllGasMetrics();
         Assertions.assertNotNull(response);
         Assertions.assertNotNull(response.getBody());
-        verify(electricService, atLeastOnce()).deleteAll();
+        verify(gasService, atLeastOnce()).deleteAll();
     }
 
     private List<Metric> createMetricList() {
@@ -80,4 +83,5 @@ public class ElectricResourceTest {
         metricList.add(metric);
         return metricList;
     }
+    
 }
